# Faceblur_Pipeline

.claude/: settings.local.json
face_blur_tool/: .gitignore  README.md  pyproject.toml  requirements.txt
face_blur_tool/notebooks/: FaceBlur_Batch_Colab.ipynb  FaceBlur_Batch_Colab_v1.ipynb
face_blur_tool/sample_data/: README.md
face_blur_tool/src/: config.py  constants.py  ffmpeg_utils.py  frame_reader.py  frame_writer.py  gcs_io.py  logging_utils.py  manifest.py  video_inventory.py  video_probe.py
face_blur_tool/src/blur/: blur_ops.py  compositor.py  masks.py
face_blur_tool/src/detectors/: base.py  factory.py  mediapipe_detector.py  retinaface_detector.py  tiled_detector.py
face_blur_tool/src/pipeline/: batch_runner.py  process_video.py  result_types.py  retry.py
face_blur_tool/src/tracking/: interpolation.py  scene_cut.py  smoothing.py  tracker.py  types.py
face_blur_tool/src/utils/: paths.py  timing.py  validation.py
face_blur_tool/tests/: test_batch_runner_smoke.py  test_bbox_pathological.py  test_blur_application.py  test_config.py  test_exception_taxonomy.py  test_interpolation.py  test_interpolation_edge_cases.py  test_manifest.py  test_manifest_edge_cases.py  test_mask_generation.py  test_mux_timeout.py  test_output_naming.py  test_process_video_smoke.py  test_retry_logic.py  test_scene_cut.py  test_smoothing.py  test_track_aware_interpolation.py  test_tracker_ids.py  test_uri_edge_cases.py  test_video_inventory.py
